--- a/css/barra.css
+++ b/css/barra.css
@@ -1,20 +1,11 @@
-.nav-item{
-    /*background-color: #818181; Green */
-    border: none;
-    color: rgb(100, 59, 59);
-    padding: 16px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 0px;
-    transition-duration: 0.4s;
-    cursor: pointer;
-}
-.nav-item a{
-    color: rgb(0, 0, 0);
-}
-
-@media screen and (max-width:600px) {
+#barraNavegacion{
     
+    border-radius:1%;box-shadow:0 10px 16px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19)
+}
+.navbar-toggler{
+    background-color:bisque;
+    
+}
+#navbarCollapse{
+    margin-left:25%;
 }
